<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manualActivity"
    android:orientation="vertical"
    android:background="#F7F5F5"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="53dp">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/manual_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/item9"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/main0"
            />
        <TextView
            android:id="@+id/manual_tv_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/fanhuianniu"
            android:paddingLeft="15dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c6c6c6"
        />
    <Button
        android:id="@+id/manual_btn1"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/lv_btn"
        android:gravity="left|center_vertical"
        android:padding="5dp"
        android:text="@string/item1_4"
        android:textSize="18sp"
        android:drawableRight="@mipmap/gengduo"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F7F5F5"
        />
    <Button
        android:id="@+id/manual_btn2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/lv_btn"
        android:gravity="left|center_vertical"
        android:padding="5dp"
        android:text="@string/item2_4"
        android:textSize="18sp"
        android:drawableRight="@mipmap/gengduo"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F7F5F5"
        />
    <Button
        android:id="@+id/manual_btn3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/lv_btn"
        android:gravity="left|center_vertical"
        android:padding="5dp"
        android:text="@string/item7"
        android:textSize="18sp"
        android:drawableRight="@mipmap/gengduo"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F7F5F5"
    />
    <Button
        android:id="@+id/manual_btn4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/lv_btn"
        android:gravity="left|center_vertical"
        android:padding="5dp"
        android:text="@string/item8"
        android:textSize="18sp"
        android:drawableRight="@mipmap/gengduo"/>
</LinearLayout>