<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@drawable/lv_bg01"
    android:layout_gravity="center"
    >

    <com.example.intelligent_agri_pengyk.view.RoundImageView
        android:layout_gravity="center"
        android:id="@+id/shouye_lv02_roundimg"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_weight="60"
        android:layout_marginLeft="15dp"
        android:src="@mipmap/co2"
        android:layout_marginRight="5dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shouye_lv02_conlayout"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_weight="99"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/shouye_lv02_co2_img01"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/p1"
            />
        <TextView
            android:id="@+id/shouye_lv02_tv_pm25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PM2.5"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="50dp"
            android:textColor="#FB8C00"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="27dp"
            />
        <LinearLayout
            android:paddingLeft="15dp"
            android:id="@+id/shouye_lv01_line01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="@id/shouye_lv02_conlayout"
            app:layout_constraintLeft_toLeftOf="@id/shouye_lv02_conlayout"
            >

            <TextView
                android:paddingTop="15dp"
                android:id="@+id/shouye_lv02_tv01"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="13dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:text="@string/item5_0"
                android:textColor="#000000"
                app:layout_constraintLeft_toLeftOf="@id/shouye_lv02_conlayout"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_marginLeft="13dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:gravity="left"
                    android:singleLine="true"
                    android:id="@+id/shouye_lv02_tv02"
                    android:text="@string/item3_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:layout_weight="3" />
                <TextView
                    android:gravity="left"
                    android:id="@+id/shouye_lv02_co2_tv01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="35"
                    android:textSize="18sp"
                    android:layout_weight="3"
                    />
                <TextView
                    android:gravity="left"
                    android:singleLine="true"
                    android:id="@+id/shouye_lv02_tv04"
                    android:text="@string/item4_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:layout_weight="3" />
                <TextView
                    android:gravity="left"
                    android:id="@+id/shouye_lv02_co2_tv03"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="32"
                    android:textSize="18sp"
                    android:layout_weight="3"
                    />
                <ImageView
                    android:id="@+id/shouye_lv02_co2_img02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/right"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:gravity="left"
                android:layout_marginRight="11dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginLeft="13dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:id="@+id/shouye_lv02_tv03"
                        android:text="@string/item3_1"
                        android:textColor="#40E0D0"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:textSize="16sp"
                        android:id="@+id/shouye_lv02_co2_tv02"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="0~90"
                        android:paddingLeft="5dp"
                        android:layout_weight="3"
                        android:textColor="#c6c6c6"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginLeft="13dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:id="@+id/shouye_lv02_tv05"
                        android:text="@string/item4_1"
                        android:textColor="#40E0D0"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:paddingLeft="5dp"
                        android:textSize="16sp"
                        android:id="@+id/shouye_lv02_co2_tv04"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="0~90"
                        android:layout_weight="3"
                        android:textColor="#c6c6c6"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>