<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlActivity"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="53dp">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/control_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/item7_1"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/main0"
            />
        <TextView
            android:id="@+id/control_tv_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/fanhuianniu"
            android:paddingLeft="15dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c6c6c6"
        />
    <LinearLayout
        android:id="@+id/control_line"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@mipmap/kongqibeijing"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:visibility="gone"
                android:orientation="horizontal"
                android:id="@+id/control_tv_line1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/control_tv_line1_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item7_1" />
                <TextView
                    android:id="@+id/control_tv_line1_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="null" />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:orientation="horizontal"
                android:id="@+id/control_tv_line2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/control_tv_line2_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item7_2" />
                <TextView
                    android:id="@+id/control_tv_line2_tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="null" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:visibility="gone"
                android:orientation="horizontal"
                android:id="@+id/control_tv_line3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/control_tv_line3_tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item3_2" />
                <TextView
                    android:id="@+id/control_tv_line3_tv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="null~~null" />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:orientation="horizontal"
                android:id="@+id/control_tv_line4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/control_tv_line4_tv7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item4_2" />
                <TextView
                    android:id="@+id/control_tv_line4_tv8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="null~~null" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:visibility="gone"
            android:id="@+id/btn_fengshan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/dakaifengshan"
            android:layout_weight="1"/>
        <ImageView
            android:visibility="gone"
            android:id="@+id/btn_guangzhao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/dakaiguangzhao"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:visibility="gone"
            android:id="@+id/btn_shuibeng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/dakaishui"
            android:layout_weight="1"/>
        <ImageView
            android:visibility="gone"
            android:id="@+id/btn_baojing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/dakaibaojing"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>